--- a/package.json
+++ b/package.json
@@ -64,7 +64,6 @@
     "@storybook/react": "^5.3.19",
     "jest-image-snapshot": "^4.0.2",
     "jest-puppeteer": "^4.4.0",
-    "puppeteer": "^5.1.0",
-    "start-server-anyarnd-test": "^1.11.2"
+    "puppeteer": "^5.1.0"
   }
 }
