--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todolist-ts",
+  "name": "it-incubator-todolist-ts",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,21 +12,21 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
+    "@types/react": "^17.0.48",
     "@types/react-dom": "^16.9.0",
-    "@types/react-redux": "^7.1.9",
+    "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.1.5",
     "@types/uuid": "^7.0.3",
     "axios": "^0.19.2",
     "formik": "^2.1.5",
-    "react": "^16.13.1",
+    "react": "^17.0.2",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "typescript": "^4.7.4",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "typescript": "4.7.4",
     "uuid": "^8.0.0"
   },
   "scripts": {
@@ -62,8 +62,11 @@
     "@storybook/addons": "^5.3.19",
     "@storybook/preset-create-react-app": "^3.1.3",
     "@storybook/react": "^5.3.19",
+    "@types/storybook-react-router": "^1.0.1",
     "jest-image-snapshot": "^4.0.2",
     "jest-puppeteer": "^4.4.0",
-    "puppeteer": "^5.1.0"
+    "puppeteer": "^5.1.0",
+    "start-server-and-test": "^1.11.2",
+    "storybook-react-router": "^1.0.8"
   }
 }
